force-app/main/default/objects/Apttus_DocuApi__DocusignUserConsent__c/Apttus_DocuApi__DocusignUserConsent__c.object-meta.xml
<CustomObject>
    <label>Docusign User Consent</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Docusign User Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign User Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>