force-app/main/default/objects/Apttus_DocuApi__DocusignUserConsent__c/fields/Apttus_DocuApi__DocusignAccountID__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignAccountID__c</fullName>
    <label>Docusign Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>