force-app/main/default/objects/Apttus_DocuApi__DocusignUserConsent__c/fields/Apttus_DocuApi__DocusignUserEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignUserEmail__c</fullName>
    <label>Docusing User Email</label>
    <type>Email</type>
</CustomField>