force-app/main/default/objects/Apttus_DocuApi__DocusignUserConsent__c/fields/Apttus_DocuApi__User__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Docusign_User_Consents</relationshipName>
    <type>Lookup</type>
</CustomField>